Fix bug: Fresh Bread image width too small
The menu-text-container was too big and squishing the
Fresh Bread image specifically for some reason

--- a/src/styles.css
+++ b/src/styles.css
@@ -178,7 +178,7 @@ nav button:hover {
 
 .menu-text-container {
     padding: 15px;
-    width: 600px;
+    width: 500px;
 }
 
 .menu-name-container{
